--- a/ClientLookup.css
+++ b/ClientLookup.css
@@ -1,41 +1,3 @@
-.button{
-    margin-top: 30px; 
-    background-color: white; 
-    border: none;
-    color: #5168ac;
-    padding: 5px 34px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    width: 50px;
-}
-.button1{
-    margin-top: 30px;
-    margin-left: 117px; 
-    background-color: white; 
-    border: none;
-    color: #5168ac;
-    padding: 5px 34px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    width: 30px;
-}
-.button2{
-    margin-top: 30px;
-    margin-left: 10px; 
-    background-color: white; 
-    border: none;
-    color: white;
-    padding: 5px 34px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    width: 50px;
-}
 
 .flexing{
     display:flex;
@@ -46,7 +8,7 @@
 .table{
     width: 650px;
     height: 300px;
-	background-color: lightgrey;
+	  background-color: lightgrey;
     color: #5168ac;
     overflow-y: scroll;
     border: solid black;
@@ -57,7 +19,176 @@ td{
     height: 50px;
     border: 1px solid black;
 }
+tr{
+    background-color: #5168ac;
+    color: white;
+}
   body {
   background-color: #5168ac;
-  
   }
+
+  @import url(https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900);
+
+  h1,
+  p,
+  a{
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato';
+  }
+  
+  h1 {
+    font-size: 2.8em;
+    padding: 10px 0;
+    font-weight: 800;
+  }
+  
+  p {
+    font-size: 1.1em;
+    font-weight: 100;
+    letter-spacing: 5px;
+  }
+  
+  .header {
+    width: 100%;
+    padding:60px 0;
+    text-align: center;
+    color: white;
+  }
+  
+  .btn-bgstroke {
+    font-size: 20px;
+    display: inline-block;
+    border: 1px solid white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: 300;
+    margin-top: 30px; 
+  }
+  
+  .btn-bgstroke:hover {
+    background-color: white;
+    color: #33cccc;
+  }
+  
+  body {
+      background-color: #5168ac;
+      color:white;
+      text-align: center;
+      justify-content: center;
+  }
+  div.Menu{
+      margin-top: 70px;
+  }
+  .button{
+      margin-top: 30px; 
+      background-color: white; 
+      border: none;
+      color: black;
+      padding: 5px 34px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      width: 115px;
+  }
+  
+  h2{
+      color:#5168ac;
+      font-size: 30px;
+  }
+  
+  div.nav{ 
+  
+      background-color:black; 
+      
+      width:950px; 
+      
+      height:500px;
+      
+      position:center; 
+      
+      margin-left:auto; 
+      
+      margin-right:auto; 
+      
+      margin-top: 50px;
+      
+      border:2px solid white; 
+      
+      background-image: -webkit-gradient(linear, center top, center bottom, from(#FFFFFF), to(#5168ac)); 
+      
+      } 
+  
+      .button {
+          display: inline-block;
+          border-radius: 4px;
+          background-color: #5168ac;
+          border: none;
+          color: #FFFFFF;
+          font-size: 20px;
+          padding: 5px;
+          width: 200px;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 5px;
+          margin-left: 0px;
+          margin-right: 0px;
+        }
+        .button2{
+          display: inline-block;
+          border-radius: 4px;
+          background-color: #5168ac;
+          border: none;
+          color: #FFFFFF;
+          font-size: 20px;
+          padding: 5px;
+          width: 200px;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 5px;
+          margin-left: 0px;
+          margin-right: 520px;
+        }
+        
+        .button span {
+          cursor: pointer;
+          display: inline-block;
+          position: relative;
+          transition: 0.5s;
+        }
+        
+        .button span:after {
+          content: '\00bb';
+          position: absolute;
+          opacity: 0;
+          top: 0;
+          right: -20px;
+          transition: 0.5s;
+        }
+        
+        .button:hover span {
+          padding-right: 25px;
+        }
+        
+        .button:hover span:after {
+          opacity: 1;
+          right: 0;
+        }
+        input{
+          width: 150px;
+          border: 4px, #5168ac;
+          border-radius: 50px;
+          height: 30px;
+          margin-left: 0px;
+        }
+        input[type=submit]{
+          margin-right: 700px;
+          width: 50px;
+          border: 4px, #5168ac;
+          border-radius: 50px;
+          height: 20px;
+          font-size: 12px;
+        }
+  
