--- a/login.css
+++ b/login.css
@@ -1,64 +1,203 @@
- body {
-        background-color: #5168ac;
-        color:white;
-        text-align: center;
-        justify-content: center;
+body {
+    background-color: #5168ac;
+    color: white;
+    text-align: center;
+    justify-content: center;
+}
+
+div.Image {
+    margin-top: 100px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    height: 300px;
+    border: 2px;
+}
+
+div.LoginBox {
+    margin-top: 40px;
+    height: 60px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+input[type=text] {
+    width: 70%;
+    padding: 5px 5px;
+    box-sizing: border-box;
+}
+
+input[type=password] {
+    width: 70%;
+    padding: 5px 5px;
+    box-sizing: border-box;
+}
+
+.navbuttons {
+    margin-top: 100px;
+    margin-left: 0px;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900);
+
+h1,
+p,
+a {
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato';
+}
+
+h1 {
+    font-size: 2.8em;
+    padding: 10px 0;
+    font-weight: 800;
+}
+
+p {
+    font-size: 1.1em;
+    font-weight: 100;
+    letter-spacing: 5px;
+}
+
+.header {
+    width: 100%;
+    padding: 60px 0;
+    text-align: center;
+    color: white;
+    height: 30px;
+}
+
+
+.btn-bgstroke {
+    font-size: 20px;
+    display: inline-block;
+    border: 1px solid white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: 300;
+    margin-top: 30px;
+}
+
+    .btn-bgstroke:hover {
+        background-color: white;
+        color: #33cccc;
     }
-    div.Image{
-        margin-top: 250px;
-		margin-right: 45px;
-        justify-content: center;
-        display: flex;
-        align-items: center;
-        height: 300px;
-        border: 2px;
-    }
-    div.LoginBox{
-        height: 60px;
-        align-items: center;
-        display: flex;
-        justify-content: center;
-        
-    }
-    .button{
-        margin-top: 30px; 
-        background-color: white; 
-        border: none;
-        color: black;
-        padding: 5px 34px;
-        text-align: center;
-        text-decoration: none;
+
+body {
+    background-color: #5168ac;
+    color: #5168ac;
+    text-align: center;
+    justify-content: center;
+}
+
+div.Menu {
+    margin-top: 70px;
+}
+
+h2 {
+    color: #5168ac;
+    font-size: 30px;
+}
+
+label {
+    color: #5168ac;
+    align-items: left;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+input {
+    width: 150px;
+    border: 4px, #5168ac;
+    border-radius: 50px;
+    height: 30px;
+}
+
+textarea {
+    height: 100px;
+    width: 500px;
+    color: #5168ac;
+}
+
+input[type=checkbox] {
+    width: 20px;
+    height: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+input[type=submit] {
+    margin-top: 10px;
+    display: inline-block;
+    border-radius: 4px;
+    background-color: white;
+    border: none;
+    color: #5168ac;
+    text-align: center;
+    font-size: 20px;
+    padding: 5px;
+    width: 200px;
+    height: 40px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin-bottom: 5px;
+}
+
+div.nav {
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    width: 950px;
+    height: 700px;
+    position: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    border: 2px solid white;
+    background-image: -webkit-gradient(linear, center top, center bottom, from(#FFFFFF), to(#5168ac));
+}
+
+.button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: white;
+    border: none;
+    color: #5168ac;
+    text-align: center;
+    font-size: 20px;
+    padding: 5px;
+    width: 200px;
+    height: 40px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin-top: 0px;
+}
+
+    .button span {
+        cursor: pointer;
         display: inline-block;
-        font-size: 16px;
-        width: 115px;
+        position: relative;
+        transition: 0.5s;
     }
-    input[type=text] {
-		text-align: center;
-		justify-content: center;
-        width: 70%;
-        padding: 5px 5px;
-        box-sizing: border-box;
-        
-      }
-    input[type=password] {
-        width: 70%;
-        padding: 5px 5px;
-        box-sizing: border-box;
-        
-      }
-	input[type=submit]{
-		margin-left: 65px;
-        background-color: white; 
-        border: none;
-        color: black;
-        padding: 5px 34px;
-        text-align: left;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 10px;
-        width: 90px;
-	}
-    .navbuttons{
-        margin-top: 100px;
-        margin-left: 0px;
+
+        .button span:after {
+            content: '\00bb';
+            position: absolute;
+            opacity: 0;
+            top: 0;
+            right: -20px;
+            transition: 0.5s;
+        }
+
+    .button:hover span {
+        padding-right: 25px;
     }
+
+        .button:hover span:after {
+            opacity: 1;
+            right: 0;
+        }
